# tic-tac-toe-pro

./: .gitignore  README.md  pyproject.toml
app/: main.py
frontend/: index.html  script.js  style.css
